--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,3 +1,75 @@
+:root {
+  --gray0: #f8f8f8;
+  --gray1: #dbe1e8;
+  --gray2: #b2becd;
+  --gray3: #6c7983;
+  --gray4: #454e56;
+  --gray5: #2a2e35;
+  --gray6: #12181b;
+  --blue: #0084a5;
+  --purple: #a82dd1;
+  --yellow: #fff565;
+}
+
+.light {
+  background-color: var(--gray0);
+  --bg-nav: linear-gradient(to right, var(--gray1), var(--gray3));
+  --bg-dropdown: var(--gray0);
+  color: var(--gray6);
+  --border-color: var(--blue);
+  --bg-solar: var(--yellow);
+  width: 100vw;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  a {
+    color: var(--gray6);
+  }
+  transition: 1s all;
+}
+
+.dark {
+  background-color: var(--gray5);
+  --bg-nav: linear-gradient(to right, var(--gray4), var(--gray6));
+  --bg-dropdown: var(--gray6);
+  color: var(--gray0);
+  --border-color: var(--purple);
+  --bg-solar: var(--blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100px;
+
+  transition: 1s;
+}
+
+.solar {
+  background-color: #eef4d4;
+  --bg-nav: linear-gradient(to right, var(--gray0), var(--gray6));
+  --bg-dropdown: var(--gray4);
+  color: var(--gray6);
+  --border-color: #f79d5c;
+  height: 100px;
+  width: 100vw;
+  --bg-solar: var(--blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  a {
+    color: #aaa;
+  }
+  transition: 1s;
+}
+
 .home-wrapper {
   margin-top: 40px;
+}
+
+.columnsH {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
